--- a/Vedauri.csproj
+++ b/Vedauri.csproj
@@ -136,6 +136,19 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\portfolio\soft\p_suite_01.JPG" />
+    <Content Include="img\portfolio\soft\p_suite_02.JPG" />
+    <Content Include="img\portfolio\soft\p_suite_03.JPG" />
+    <Content Include="img\portfolio\soft\p_suite_04.JPG" />
+    <Content Include="img\portfolio\soft\p_suite_05.JPG" />
+    <Content Include="img\portfolio\web\ea_01.JPG" />
+    <Content Include="img\portfolio\web\ea_02.JPG" />
+    <Content Include="img\portfolio\web\ea_03.JPG" />
+    <Content Include="img\portfolio\web\ea_04.JPG" />
+    <Content Include="img\portfolio\web\ea_05.JPG" />
+    <Content Include="img\portfolio\web\ea_06.JPG" />
+    <Content Include="img\portfolio\web\ea_07.JPG" />
+    <Content Include="img\portfolio\web\ea_08.JPG" />
     <Content Include="img\v-hug.png" />
     <Content Include="img\v-lar.png" />
     <Content Include="img\v-med.png" />
